# index-daemon

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  index-daemon.hcl
.github/actions/deploy/: action.yml
.github/workflows/: github-actions-demo.yml  github-actions.yml  main.yml
helm/: Chart.yaml  prod.yaml  staging.yaml  values.yaml
helm/templates/: NOTES.txt  deployment.yaml  externalsecret.yaml  ingress.yaml  pvc.yaml  service.yaml
resources/: cli.yml  config.xml  curr_daemon.config  market_config_default.yml  poloniex_exchange_pairs.json
src/: graceful_shutdown.rs  helper_functions.rs  main.rs  worker.rs
src/config_local/: config_local.rs  mod.rs
src/config_scheme/: async_from.rs  config_scheme.rs  helper_functions.rs  market_config.rs  mod.rs  repositories_prepared.rs  service_config.rs  storage.rs
src/other_helpers/: config_parser.rs
src/repository/: exchange_pair_info_cache.rs  f64_by_timestamp_and_pair_tuple_sled.rs  f64_by_timestamp_cache.rs  f64_by_timestamp_rocksdb.rs  f64_by_timestamp_sled.rs  f64_repository.rs  hepler_functions.rs  mod.rs  pair_average_price_cache.rs  pair_average_price_sled.rs  pair_average_trade_price.rs  pair_average_trade_price_cache.rs  repositories.rs  repository.rs  timestamp_repository.rs
src/test/: mod.rs  ws_server.rs
src/test/ws_server/: channels.rs  error_type.rs  helper_functions.rs  methods.rs  mod.rs  request.rs  ws_client_for_testing.rs
src/tests/: config_parser.rs
src/worker/: db_cleaner.rs  defaults.rs  helper_functions.rs  mod.rs  worker.rs  xml_reader.rs
src/worker/market_helpers/: action.rs  conversion_type.rs  exchange_pair.rs  exchange_pair_info.rs  hepler_functions.rs  market.rs  market_channels.rs  market_name.rs  market_spine.rs  market_value.rs  market_value_owner.rs  mod.rs  pair_average_price.rs  percent_change.rs  percent_change_by_interval.rs  status.rs  (+2 more)
test/resources/: curr_daemon__bad__no_equal_sign.config  curr_daemon__bad__no_param_code.config  curr_daemon__bad__param_code_with_space.config  curr_daemon__good.config
(+164 files in other folders)
