[package]
name = "index-daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xmltree = "0.10.3"
chrono = "0.4.19"
async-tungstenite = { version="0.16.0", features=["async-std-runtime", "async-tls"] }
futures = "^0.3"
async-std = "^1.0"
rustc-serialize = "0.3.24"
reqwest = { version="0.11.7", features=["blocking", "multipart"] }
