[package]
name = "index-daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntest = "0.7.3"
chrono = "0.4.19"
async-tungstenite = { version="0.16.0", features=["async-std-runtime", "async-tls"] }
futures = "^0.3"
async-std = "^1.0"
rustc-serialize = "0.3.24"
reqwest = { version="0.11.7", features=["blocking", "multipart"] }
clap = { version="2.34.0", features=["yaml"] }
config = "0.11.0"
log = "0.4.0"
env_logger = "0.9.0"
flate2 = "1.0.22"
regex = "1.5.4"
rand = "0.8.4"
jsonrpc-core = "18.0.0"
