[package]
name = "index-daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "^0.4"
async-tungstenite = { version="^0.17", features=["async-std-runtime", "async-tls"] }
futures = "^0.3"
async-std = { version = "^1.11", features = ["tokio1"] }
reqwest = { version="^0.11", features=["multipart"] }
clap = { version="^3.1", features=["yaml"] }
config = "^0.13"
log = "^0.4"
env_logger = "^0.9"
flate2 = "^1.0"
regex = "^1.5"
rand = "^0.8"
signal-hook = "^0.3"
libc = "^0.2"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
uuid = { version="^1.0", features=["v4"] }
vsdbsled = "^0.34.7-p1"
dyn-clone = "^1.0"
parse_duration = "^2.1"
tokio = { version="^1.18", features=["macros", "rt-multi-thread", "signal"] }
async-trait = "^0.1"

[dev-dependencies]
ntest = "^0.7"
serial_test = "^0.6"
